# HSE

./: .env.example  README.md  pyproject.toml
config/: api_keys.example.yaml  scan_profiles.yaml  tools.yaml
pentestai/: __init__.py
pentestai/ai/: client.py  context.py  conversation.py  decision_engine.py  orchestrator.py  response_parser.py  tool_definitions.py
pentestai/cli/: main.py
pentestai/cli/commands/: exploit.py  project.py  report.py  scan.py  tool.py
pentestai/core/: __init__.py  config.py  database.py  exceptions.py  executor.py
pentestai/exploit/: executor.py  handlers.py  msf_client.py  payload_server.py  payloads.py  selector.py  sessions.py
pentestai/models/: __init__.py  base.py  entities.py
pentestai/parsers/: credentials.py  deduplicator.py  engine.py  normalizer.py
pentestai/parsers/formats/: __init__.py  grep_parser.py  json_parser.py  text_parser.py  xml_parser.py
pentestai/reports/: generator.py
pentestai/reports/formats/: html.py
pentestai/repositories/: __init__.py  base.py  credential.py  evidence.py  project.py  report.py  scan.py  session.py  target.py  vuln.py
pentestai/tools/: base.py  capabilities.py  registry.py  schemas.py
pentestai/tools/exploit/: msfvenom.py
pentestai/tools/postexploit/: __init__.py  kernel.py  linpeas.py  privesc.py  sudo.py  suid.py  winpeas.py
pentestai/tools/recon/: dnsrecon.py  nmap.py  subfinder.py
pentestai/tools/vuln/: hydra.py  metasploit.py  sqlmap.py  ssh_audit.py
pentestai/tools/web/: ffuf.py  gobuster.py  nikto.py  nuclei.py  (+1 more)
pentestai/web/: app.py
scripts/: init_db.py
(+8 files in other folders)
