[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pentestai"
version = "0.1.0"
description = "PentestAI core framework"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=1.10,<2.0",
    "SQLAlchemy>=1.4,<2.0",
    "alembic>=1.10",
    "psycopg2-binary>=2.9",
    "PyYAML>=6.0",
    "requests>=2.31,<3",
    "defusedxml>=0.7.1"
]

[tool.optional-dependencies]
cli = ["typer>=0.9"]
web = ["fastapi>=0.95", "uvicorn>=0.22"]
